fixed styling (color,max-width for img, spacing)

--- a/src/Pokecard.css
+++ b/src/Pokecard.css
@@ -1,11 +1,22 @@
 .Pokecard-wrap {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .Pokecard {
-    padding: 3rem;
+    padding: 1rem 3rem;
     border: 1px black solid;
     margin: 2rem;
     text-align: center;
+    border-radius: 10px;
+    background-color: rgb(189, 189, 189);
+}
+
+.Pokecard-name {
+    color: rgb(30, 34, 255);
+}
+
+.Pokecard-img {
+    max-width: 150px;
 }
